h/static/styles/base.scss
@import "./variables";
@import "./util";

/* Style input placeholders */
@mixin placeholder {
  &.placeholder { @content; }
  &:placeholder { @content; }
  &::placeholder { @content; }
}

/* Shadow mixins */
@mixin smallshadow($a: 0, $b: 1px, $c: .1) {
  box-shadow: $a $b 1px hsla(0, 0%, 0%, $c);
}

@mixin quote {
  @include font-normal;

  border-left: 3px solid $gray-lighter;
  color: $grey-5;
  font-family: sans-serif;
  //font-size: 12px;
  font-style: italic;
  letter-spacing: 0.1px;
  padding: 0 1em;
}

//Provides the grey-background
@mixin grey-background {
  background: $sidebar-background-gray;
}

.annotator-hide {
  display: none;
  visibility: hidden;
}

